[package]
name = "serde_bytes_wrapper"
version = "0.1.0"
authors = ["dedefer <ddf1998@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["serde", "bytes", "b64"]
categories = ["encoding"]
repository = "https://github.com/dedefer/serde_bytes_wrapper"
homepage = "https://github.com/dedefer/serde_bytes_wrapper"
description = "Wrapper for Vec<u8>, which uses serde_bytes as representation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_bytes = { version = "0.11" }


[dev-dependencies]
serde_json = { version = "1" }
serde_cbor = { version = "0.11" }
base64 = { version = "0.13" }
serde-bytes-repr = { version = "0.1" }
